--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,11 +14,12 @@ rust-uci = { git = 'https://github.com/East-China-Gold-Medal/rust-uci',optional 
 lazy_static = "1.5.0"
 shadow = "0.0.1"
 pwhash = "1.0.0"
-regex = "1.10.6"
 serde_json = "1.0.122"
 http = "0.2.12"
 serde = { version = "1.0.204", features = ["derive"] }
 rand = "0.8.5"
+rust-embed = { version = "8.5.0", features = ["debug-embed"] }
+regex = "1.10.6"
 
 [build-dependencies]
 syn = "2.0.72"
